# RemoteControlViaEmail

./: .gitignore  CMakeLists.txt  README.md  config.ini
RemoteControlViaEmail - Client/: CMakeLists.txt
RemoteControlViaEmail - Client/src/app/: CustomBitmapButton.cpp  FileExplorer.h  GmailLoginDialog.cpp  LogPanel.h  LoginFrame.h  ServiceManager.cpp  ServiceManager.h
RemoteControlViaEmail - Client/src/utils/: Client.cpp  Client.h  Email.cpp  networkDiscovery.cpp
RemoteControlViaEmail - Server/: CMakeLists.txt  Process.h  WebcamController.cpp  discoveryResponder.cpp  server.h
src/: App.cpp  App.h  Client.cpp  Client.h  EmailRetrieval.cpp  EmailRetrieval.h  GetWinDirectory.cpp  GetWinDirectory.h  IniParser.cpp  IniParser.h  LoginFrame.cpp  LoginFrame.h  MainFrame.cpp  MainFrame.h  OAuth2_Google.cpp  client.cpp  client.h  commands.txt  ipscanner.cpp  main.cpp  mainFrame.cpp  mainFrame.h
src/app/: App.h  CustomBitmapButton.cpp  CustomBitmapButton.h  FileExplorer.cpp  FileExplorer.h  GmailLoginDialog.cpp  GmailLoginDialog.h  LogPanel.cpp  LogPanel.h  LoginFrame.cpp  LoginFrame.h  MainFrame.cpp  MainFrame.h  MiniExplorer.cpp  MiniExplorer.h  ProcessManager.cpp  ProcessManager.h  ServiceManager.cpp  ServiceManager.h
src/camera/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  cache_D.txt  main.cpp  networkDiscovery.cpp  networkDiscovery.h
src/examples/: CMakeLists.txt  EmailRetrievalUsage.cpp  GetWinDirectoryUsage.cpp  WxWidgetUsage.cpp  cache_C_demo.txt  cache_D_demo.txt  emailRetrievalUsage.cpp  folder_traversal.cpp  testsigma.cpp
src/ip/: CMakeLists.txt  main.cpp
src/ipscanner/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  Process.cpp  Process.h  Service.cpp  Service.h  WebcamController.cpp  WebcamController.h  WindowsCommands.cpp  WindowsCommands.h  discoveryResponder.cpp  discoveryResponder.h  main.cpp  main.h  server.cpp  server.h
src/utils/: Client.cpp  Client.h  Email.h  EmailResponder.cpp  EmailResponder.h  EmailRetrieval.cpp  EmailRetrieval.h  GetWinDirectory.cpp  GetWinDirectory.h  IniParser.cpp  IniParser.h  IpDiscovery.cpp  IpDiscovery.h  NetworkDiscovery.h  Process.cpp  Process.h  Server.cpp  Server.h  Service.cpp  Service.h  WebcamController.cpp  WebcamController.h  WindowsCommands.cpp  WindowsCommands.h  networkDiscovery.cpp  networkDiscovery.h
